# RecursiveSerendipity

./: .cursorrules  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
engine/: index.ts  package.json  types.ts
engine/execution/: linter.ts  manager.ts  sandbox.ts  screenshot.ts
engine/graph/: edges.ts  state.ts  workflow.ts
engine/graph/nodes/: build-checker.ts  evaluator.ts  generator.ts  refiner.ts
engine/heuristics/: build-score.ts  lint-score.ts  score.ts
engine/memory/: sqlite.ts
engine/providers/: ollama.ts  thermal.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: ComponentPreview.tsx  EvolutionTimeline.tsx  MetricsPanel.tsx  SeedInput.tsx  VariantGallery.tsx
src/hooks/: useEngine.ts
src/lib/: exportVariants.ts  tauri-bridge.ts
