[package]
name = "recursive-serendipity"
version = "0.1.0"
description = "Autonomous Ultra-Recursive Architecture - Local-first agentic runner"
authors = ["powerox"]
edition = "2021"

[lib]
name = "recursive_serendipity_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
dirs = "6"

